--- a/logIn.css
+++ b/logIn.css
@@ -71,7 +71,14 @@ label {
   margin: 0.625rem 0 0.3125rem;
   font-size: 0.875rem;
 }
-
+input[type="email"]:valid {
+  border-color: green;
+  box-shadow: 0 0 8px green;
+ }
+ input[type="email"]:invalid:not(:placeholder-shown) {
+  border-color: red;
+  box-shadow: 0 0 8px red;
+ }
 input[type="text"],
 input[type="password"] {
   border-radius: 0.3125rem;
