--- a/welcomePage.css
+++ b/welcomePage.css
@@ -112,13 +112,14 @@ button {
   background-position-x: right;
   background-position-y: 50%;
   background-color: rgba(19, 129, 219, 0.363);
+  width: 100%;
   color: white;
 
 }
 
 .section1 p {
   font-size: 22px;
-  width: 719px;
+  width: 50%;
   flex-shrink: 0;
   color: rgb(0, 0, 0);
   text-align: center;
@@ -141,7 +142,7 @@ button {
 
 .section2 p {
   text-align: center;
-  font-size: 20px;
+  font-size: clamp(16px, 2.5vw, 20px);
 }
 
 .section2conCon {
@@ -162,7 +163,8 @@ button {
   border: 2px solid #003366;
   border-radius: 10px;
   width: fit-content;
-  height: 100%;
+  height: auto;
+  width: 100%;
   padding: 0.8rem;
 
 }
@@ -175,6 +177,7 @@ footer {
   margin-top: 10px;
   background-color: #003466;
   height: max-content;
+  width: 100%;
   color: white;
   padding: 1rem;
 }
@@ -204,4 +207,43 @@ li {
 a {
   text-decoration: none;
   color: #FFF;
+}
+@media (max-width: 600px) {
+  .section2,footer{
+    margin-top: 10%;
+  }
+  main,.section1,.section2{
+    height: max-content;
+  }
+  .section1{
+      background-image: none; 
+      background-color: rgba(19, 129, 219, 0.363);
+      flex-direction: column;
+      text-align: center;    
+  }
+  .section1 p {
+    width: 100%;
+    padding: 5%;
+  }
+  .section2{
+    height: max-content;
+  }
+  .section2conCon {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section2con {
+    width: 90%;
+  }
+footer{
+  width: 100%;
+}
+
+nav,ul{
+  display: inline-flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 0;
+}
 }
