--- a/chatBot.css
+++ b/chatBot.css
@@ -427,9 +427,49 @@ body.bot-responding .prompt-form #stop-response-btn {
   padding: 16px 20px 0;
   color: var(--placeholder-color);
 }
-
+#mobnav{
+  display: none;
+}
 /* Responsive media query code for small screens */
+@media (max-width: 1200px) {
+  ul{
+    gap: 1.3rem;
+  }
+}
 @media (max-width: 768px) {
+  #header {
+    padding: 10px;
+    margin-top: 0;
+    flex-wrap: wrap;
+    gap: 0;
+  }
+  /* header styling for mobile */
+  .logoContainer {
+    width: max-content;
+  }
+
+  .logo {
+    width: 9rem;
+    font-size: 1rem;
+  }
+  .logOut {
+    font-size: 0.8rem;
+    width: 5rem;
+    padding: 0.5rem;
+    gap: 0;
+    border-radius: 1.25rem;
+  }
+  ul {
+    justify-content: center;
+    width: fit-content;
+    gap: 1.5rem;
+  }
+
+  li {
+    padding: 0;
+    font-size: 0.8rem;
+  }
+
   .container {
     padding: 20px 0 100px;
   }
@@ -476,4 +516,44 @@ body.bot-responding .prompt-form #stop-response-btn {
   .prompt-wrapper.hide-controls :where(#theme-toggle-btn, #delete-chats-btn) {
     display: none;
   }
+}
+@media (max-width: 677px) {
+  #header {
+    padding: 10px;
+    margin-top: 0;
+    flex-wrap: wrap;
+  }
+  /* header styling for mobile */
+  .logoContainer {
+    width: max-content;
+  }
+
+  .logo {
+    width: 9rem;
+    font-size: 1rem;
+  }
+  #mainnav {
+    display: none;
+  }
+ #mobnav{
+    display: flex;
+ }
+  .logOut {
+    font-size: 0.8rem;
+    width: 5rem;
+    padding: 0.5rem;
+    gap: 0;
+    border-radius: 1.25rem;
+  }
+  ul {
+    justify-content: center;
+    width: fit-content;
+    gap: 1rem;
+  }
+
+  li {
+    padding: 0;
+    font-size: 0.8rem;
+  }
+
 }
