صفحة التقراير وتظبيط الهيدر في باقي الملفات

--- a/homePageDoctor.css
+++ b/homePageDoctor.css
@@ -22,7 +22,6 @@ main {
 header {
     padding: 0.5rem;
     display: flex;
-    gap: 2rem;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -47,27 +46,21 @@ header {
     font-weight: 700;
 }
 
-.btnCon {
+.logOut {
     display: flex;
-    gap: 1rem;
-}
-
-button {
-  display: flex;
-  width: 9.125rem;
-  padding: 0.625rem;
-  justify-content: center;
-  align-items: center;
-  gap: 0.625rem;
-  /* flex-shrink: 0; */
-  border-radius: 1.25rem;
-  background: #ffffff;
-  cursor: pointer;
-  border-style: solid;
-  border-color: #000;
-  color: #000;
-}
-
+    width: 9.125rem;
+    padding: 1rem 0.625rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    /* flex-shrink: 0; */
+    border-radius: 1.25rem;
+    background: #ffffff;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #000;
+    color: #000;
+  }
 .section1 {
     display: flex;
     justify-content: center;
@@ -135,15 +128,23 @@ footer {
 ul {
     list-style: none;
     display: flex;
+    width: max-content;
+    height: 3.5625rem;
     align-items: center;
-    gap: 2rem;
+    gap: 3.125rem;
+    flex-shrink: 0;
 }
 
 li {
-    padding: 0.625rem;
-    color: #FFF;
-    font-size: 1rem;
-    font-weight: 400;
+    display: flex;
+  width: max-content;
+  padding: 0.625rem;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 a {
