--- a/studentReport.css
+++ b/studentReport.css
@@ -8,14 +8,14 @@
   font-style: normal;
   line-height: normal;
 }
-
 /* main and general parts styling */
+.hidden{
+  display: none;
+}
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  /* background-color: #003466; */
   width: 100%;
   height: 100%;
 }
@@ -31,7 +31,8 @@ body {
 header {
   padding: 0.5rem;
   display: flex;
-  justify-content: space-between;
+  gap: 3.125rem;
+  justify-content: space-around;
   width: 100%;
   background-color: #003466;
 }
@@ -45,16 +46,19 @@ main {
   height: 48.625rem;
   flex-shrink: 0;
   background: #ffffff;
-  height: fit-content;
 }
-
-section {
-  margin-left: 3rem;
-}
-
 footer {
   background-color: #003466;
   height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 80px;
+    background-color: #003466;
+    color: white;
+    padding: 1rem;
+    width: 100%;
 }
 
 .t h2 {
@@ -62,13 +66,6 @@ footer {
   font-size: 2rem;
   font-weight: 500;
 }
-
-.personalContainer h2 {
-  color: #000000;
-  font-size: 2rem;
-  font-weight: 500;
-}
-
 input {
   display: flex;
   width: 20.4375rem;
@@ -151,10 +148,9 @@ a {
   border-style: solid;
   border-color: #000;
   color: #000;
-  
 }
 
-/* doctor profile styling */
+/* student profile styling */
 .detailsContainer {
   border: 2px solid rgb(10, 56, 139);
   border-radius: 10px;
@@ -167,20 +163,20 @@ a {
   padding: 0 0 15px;
 }
 
-.doctorContainer {
+.studentContainer {
   display: flex;
   gap: 0.5rem;
   width: 100%;
 }
 
-.doctorDetailsContainer {
+.studentDetailsContainer {
   display: flex;
   padding:0 3%;
   gap: 3rem;
   width: fit-content;
 }
 
-.doctorDetails {
+.studentDetails {
     font-size: 20px;
   display: flex;
   flex-direction: column;
@@ -207,93 +203,11 @@ img {
   background: none;
   cursor: pointer;
 }
-
-/* personal information container styling */
-.personalContainer {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 2rem;
-  color: white;
-}
-
-.headBtnContainer {
-  display: flex;
-  justify-content: space-between;
-  width: 55%;
-}
-
-.detailsEdit {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 0.5rem;
-  padding: 2rem;
-}
-
-.inputContainer {
-  display: flex;
-  justify-content: space-between;
-  gap: 0.5rem;
-  width: 100%;
-  margin: 0.2rem 0;
-}
-
-.detailsEditContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  border-radius: 1.25rem;
-  background: #003466;
-  width: 90%;
-  margin-left: 2rem;
-}
-
-.apply {
-  display: flex;
-  width: 30.4375rem;
-  height: 3.375rem;
-  padding: 0.5625rem 7.1875rem;
-  justify-content: center;
-  align-items: center;
-  align-self: flex-end;
-  gap: 0.625rem;
-  flex-shrink: 0;
-  border-radius: 1.25rem;
-  background: #0099cc;
-  color: #ffffff;
-  font-size: 1.5rem;
-  font-weight: 500;
-  border-color: #fff;
-  border-style: solid;
-  cursor: pointer;
-}
-
-.apply:hover {
-  background: #006699;
-}
-
 .edit2 {
   align-self: flex-end;
   width: 8.8%;
 }
 
-footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  margin-top: 80px;
-  background-color: #003466;
-  height: max-content;
-  color: white;
-  padding: 1rem;
-  width: 100%;
-}
 #mobnav{
     display: none;
 }
@@ -385,19 +299,18 @@ ul{
     border-radius: 1.25rem;
   }
 
-  /* doctor profile styling for tablet */
-  .doctorDetailsContainer {
+  /* student profile styling for tablet */
+  .studentDetailsContainer {
     width: max-content;
   }
 
-  .doctorDetails {
+  .studentDetails {
     gap: 0.5rem;
     width: 100%;
     font-size: 16px;
   }
 
   /*personal information styling for tablet */
-  .personalContainer,
   .headBtnContainer,
   .detailsEditContainer,
   .detailsEdit,
@@ -417,16 +330,6 @@ ul{
     margin-left: 0;
     margin-right: 0;
   }
-
-  .apply {
-    flex-direction: column;
-    align-items: center;
-    align-self: center;
-    padding: 0;
-    width: 50%;
-    margin-left: 0.6rem;
-  }
-
   .edit {
     margin-top: 1rem;
     width: fit-content;
@@ -496,11 +399,11 @@ ul{
     border-radius: 1.25rem;
   }
 
-  /* doctor profile styling for mobile */
+  /* student profile styling for mobile */
   .detailsContainer,
-  .doctorContainer,
-  .doctorDetailsContainer,
-  .doctorDetails {
+  .studentContainer,
+  .studentDetailsContainer,
+  .studentDetails {
     flex-direction: column;
     align-items: center;
     gap: 0.3rem;
@@ -510,38 +413,6 @@ ul{
     margin-left: 0.6rem;
     margin-right: 0.6rem;
   }
-
-  /*personal information styling for mobile */
-  .personalContainer,
-  .headBtnContainer,
-  .detailsEditContainer,
-  .detailsEdit,
-  .inputContainer {
-    flex-direction: column;
-    align-items: center;
-    width: 95%;
-    padding: 0;
-    margin-left: 0.6rem;
-    margin-right: 0.6rem;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .detailsEdit {
-    padding: 1rem 0.7rem;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .apply {
-    flex-direction: column;
-    align-items: center;
-    align-self: center;
-    padding: 0;
-    width: 50%;
-    margin-left: 0.6rem;
-  }
-
   .edit {
     margin-top: 1rem;
     width: fit-content;
