--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ button {
   border: 2px solid #003366;
   border-radius: 10px;
   width: fit-content;
-  height: auto;
+  height: 13rem;
   width: 100%;
   padding: 0.8rem;
 
